test/integration/bad/new/location-scale-bad4.stan
data { vector<offset = T, multiplier  while> x;}